<?xml version="1.0" encoding="utf-8"?>
<!-- App shortcuts — shown when long-pressing the app icon.
     Gives quick access to Favorites, History, and Downloads. -->
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="favorites"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_favorites"
        android:shortcutLongLabel="@string/shortcut_favorites_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.yazan.manga"
            android:targetClass="com.yazan.manga.MangaListActivity">
            <extra android:name="initial_tab" android:value="favorites" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="history"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_history"
        android:shortcutLongLabel="@string/shortcut_history_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.yazan.manga"
            android:targetClass="com.yazan.manga.HistoryActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="downloads"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_downloads"
        android:shortcutLongLabel="@string/shortcut_downloads_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.yazan.manga"
            android:targetClass="com.yazan.manga.DownloadsActivity" />
    </shortcut>

</shortcuts>
